# superswitcher

./: .gitignore  ChangeLog  README.md  autogen.sh  build_for_distros.sh  recompile_local_debian_package.sh
.github/workflows/: ccpp.yml
data/: Makefile.am  SuperSwitcher.Desktop  SuperSwitcher.desktop.in
debian/: README.Debian  changelog  control  copyright  rules
src/: dbus-object.c  dbus-server-bindings.h  superswitcher.c  window.c  workspace.c
